# spgemm-bench

./: CMakeLists.txt
include/: FeatureExtractor.hpp
scripts/: log.out  matrices.txt  run-bench.sh
src/: main.cpp
